<resources>
    <string name="h_app_name">sDukdy</string>
    <string name="h_sdukdy">sDukdy</string>
    <string name="h_createChat">채팅방 생성하기</string>
    <string name="h_studyGroup">모집 중인 스터디 그룹</string>
    <string name="h_fullView">더보기</string>
    <string name="h_search">검색</string>
    <string name="h_online1">온라인 | 모집인원 : 6명</string>
    <string name="h_online2">온라인 | 모집인원 : 5명</string>
    <string name="h_omputerEngi">컴퓨터공학과</string>
    <string name="h_computerEngi2">컴퓨터공학과</string>
    <string name="h_end">마감</string>
    <string name="h_end2">마감</string>
    <string name="h_join">가입</string>
    <string name="h_join2">가입</string>
    <string name="h_nothing">~~~~~~~</string>
    <string name="h_allGroup">총 15개의 스터디 그룹</string>
    <string name="h_online3">온라인</string>
    <string name="h_offline">오프라인</string>
    <string name="h_nothing2">알고리즘</string>
    <string name="h_nothing3">해커톤</string>
    <string name="h_java">JAVA프로그래밍</string>
    <string name="h_internetPro">인터넷프로그래밍</string>
    <string name="h_computerEngi3">컴퓨터공학과</string>
    <string name="h_online4">온라인 | 모집인원 : 6명</string>
    <string name="h_datast">자료구조론</string>
    <string name="h_join3">가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="h_hello_blank_fragment">Hello blank fragment</string>
    <string name="h_inbutton">입장하기</string>
    <string name="h_goal">학습목표</string>
    <string name="j_addChatting">새 채팅방 생성하기</string>
    <string name="h_subject">과목별</string>
    <string name="h_all">전체</string>
    <string name="h_seegroup">모집 중인 스터디 그룹</string>
    <string name="h_datast2">자료구조론</string>
    <string name="h_koreahis">한국현대사</string>
    <string name="h_toeic">토익</string>
    <string name="h_newchat">새 채팅방 생성하기</string>


    <string name="sjyapp_name">plan</string>
    <string name="ertapp_name">emetyroom</string>


    <!-- Hakyung -->

    <string name="h_license">자격증별</string>

    <string name="y_app_name">SDuckdy</string>
    <string name="common_confirm">아이디</string>
    <string name="common_confirm2">로그인</string>
    <string name="common_cancel">비밀번호</string>
    <string name="common_info">회원가입/비밀번호찾기</string>

    >>>>>>> a7ba5638d12486844e214e69938c8e1c3cea238b


    <string name="o_app_name">QuizApp</string>

    <string name="o_question">질문</string>
    <string name="o_count_label">%d/%d</string>
    <string name="o_submit">%s</string>

</resources>