<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".QuizmainActivity">

    <TextView
        android:id="@+id/o_question_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/o_question"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/o_progressBar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:max="5"
            android:progress="0" />

        <TextView
            android:id="@+id/o_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/o_count_label"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/o_option1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/o_option_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="답변1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/o_option2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/o_option_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="답변2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/o_option3_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/o_option_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="답변3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/o_option4_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/o_option_background"
        android:gravity="center"
        android:padding="10dp"
        android:text="답변4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/o_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/o_submit"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="#5DB9B5"/>


</LinearLayout>